--- a/aviation-importer/src/main/resources/application.conf
+++ b/aviation-importer/src/main/resources/application.conf
@@ -6,5 +6,5 @@ aviation-edge {
     server = "localhost:9092"
     main-topic = "aviation-in"
   }
-  server-key = ${secret-key}
+  server-key = ${aviation-edge-key}
 }
