--- a/data-analyzer/src/main/resources/application.conf
+++ b/data-analyzer/src/main/resources/application.conf
@@ -5,8 +5,9 @@ aviation-analyzer {
     server = "localhost:9092"
     topics {
       main-in = "aviation-in"
-      aircraft = ""
-      flight = ""
+      aircraft = "aircrafts"
+      aircraft-flights = "aircraft-flights"
+      flights = "flights"
     }
   }
 }
