--- a/aviation-importer/src/main/resources/application.conf
+++ b/aviation-importer/src/main/resources/application.conf
@@ -3,7 +3,8 @@ include "secret.conf"
 
 aviation-edge {
   kafka {
-    server = "192.168.1.17:9092"
+    server = "localhost:9092"
+//    server = "192.168.1.17:9092"
     main-topic = "aviation-in"
   }
   server-key = ${aviation-edge-key}
